Fix of file extension

--- a/inventory/windows_vars.yaml
+++ b/inventory/windows_vars.yaml
@@ -1,4 +1,5 @@
 ---
+[windows:vars]
 ansible_connection: psrp
 ansible_psrp_auth: credssp
 ansible_psrp_operation_timeout: 7
@@ -8,5 +9,4 @@ ansible_become_method: runas
 ansible_user: ansible
 ansible_password: ansible
 ansible_port: 5986
-ansible_connection: winrm
 ansible_winrm_server_cert_validation: ignore
